<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.authorization.AuthorizationFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:clipToPadding="false"
       android:padding="16dp"
       android:orientation="vertical">

       <ImageView
           android:id="@+id/imageView"
           android:layout_gravity="center"
           android:layout_margin="32dp"
           android:layout_width="wrap_content"
           android:layout_height="28dp"
           android:src="@drawable/logo"
           android:contentDescription="l-tech"
           tools:ignore="HardcodedText" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:fontFamily="@font/roboto_medium"
           android:text="@string/auth_title"
           android:textSize="20sp" />

       <TextView
           android:layout_marginTop="24dp"
           android:layout_marginBottom="8dp"
           android:textSize="16sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/auth_title_phone" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:endIconDrawable="@drawable/ic_close"
           app:endIconMode="clear_text"
           app:endIconScaleType="centerInside">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/fieldPhone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/auth_hint_phone"
               android:inputType="phone" />
       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:layout_marginTop="24dp"
           android:layout_marginBottom="8dp"
           android:textSize="16sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/auth_title_password" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/inputLayout"
           app:errorEnabled="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleEnabled="true">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/fieldPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/auth_hint_password"
               android:inputType="text|textPassword" />
       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/button"
           android:enabled="false"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/auth_button_login" />

   </LinearLayout>
</ScrollView>